Bumped Java Version to 16