@@ -31,7 +31,7 @@ public final class Logger {
    * @param info the info
    */
   public static synchronized void info(@NotNull final Object info) {
-    directPrint(String.format("%d: [INFO] %s\n", System.currentTimeMillis(), info));
+    directPrint("%d: [INFO] %s\n".formatted(System.currentTimeMillis(), info));
   }
 
   /**
@@ -40,7 +40,7 @@ public final class Logger {
    * @param warning the warning
    */
   public static synchronized void warn(@NotNull final Object warning) {
-    directPrint(String.format("%d: [WARN] %s\n", System.currentTimeMillis(), warning));
+    directPrint("%d: [WARN] %s\n".formatted(System.currentTimeMillis(), warning));
   }
 
   /**
@@ -49,7 +49,7 @@ public final class Logger {
    * @param error the error
    */
   public static synchronized void error(@NotNull final Object error) {
-    directPrint(String.format("%d: [ERROR] %s\n", System.currentTimeMillis(), error));
+    directPrint("%d: [ERROR] %s\n".formatted(System.currentTimeMillis(), error));
   }
 
   /**
