@@ -67,55 +67,55 @@ public final class SystemDiagnostics implements Diagnostic {
   private void initializeDownloadLinks() {
     if (this.cpu.isBits64()) {
       switch (this.system.getOSType()) {
-        case WINDOWS:
+        case WINDOWS -> {
           Logger.info("Detected Windows 64-bit Operating System");
           this.vlcDownloadLink =
-              "https://github.com/MinecraftMediaLibrary/VLC-Release-Mirror/raw/master/win64/VLC.zip";
+                  "https://github.com/MinecraftMediaLibrary/VLC-Release-Mirror/raw/master/win64/VLC.zip";
           this.ffmpegDownloadLink =
-              "https://github.com/a-schild/jave2/raw/master/jave-nativebin-win64/src/main/resources/ws/schild/jave/nativebin/ffmpeg-amd64.exe";
-          break;
-        case UNIX:
+                  "https://github.com/a-schild/jave2/raw/master/jave-nativebin-win64/src/main/resources/ws/schild/jave/nativebin/ffmpeg-amd64.exe";
+        }
+        case UNIX -> {
           if (this.cpu.getArchitecture().contains("arm")) {
             Logger.info("Detected Linux ARM 64-bit Operating System");
             this.ffmpegDownloadLink =
-                "https://github.com/a-schild/jave2/raw/master/jave-nativebin-arm64/src/main/resources/ws/schild/jave/nativebin/ffmpeg-aarch64";
+                    "https://github.com/a-schild/jave2/raw/master/jave-nativebin-arm64/src/main/resources/ws/schild/jave/nativebin/ffmpeg-aarch64";
           } else {
             Logger.info("Detected Linux AMD/Intel 64-bit Operating System");
             this.ffmpegDownloadLink =
-                "https://github.com/a-schild/jave2/raw/master/jave-nativebin-linux64/src/main/resources/ws/schild/jave/nativebin/ffmpeg-amd64";
+                    "https://github.com/a-schild/jave2/raw/master/jave-nativebin-linux64/src/main/resources/ws/schild/jave/nativebin/ffmpeg-amd64";
           }
           this.vlcDownloadLink = "N/A";
-          break;
-        case MAC:
+        }
+        case MAC -> {
           if (this.cpu.getArchitecture().contains("amd")) {
             Logger.info("Detected MacOS Silicon 64-bit Operating System");
             this.vlcDownloadLink =
-                "https://github.com/MinecraftMediaLibrary/VLC-Release-Mirror/raw/master/macos-intel64/VLC.dmg";
+                    "https://github.com/MinecraftMediaLibrary/VLC-Release-Mirror/raw/master/macos-intel64/VLC.dmg";
           } else {
             Logger.info("Detected MacOS AMD 64-bit Operating System!");
             this.vlcDownloadLink =
-                "https://github.com/MinecraftMediaLibrary/VLC-Release-Mirror/raw/master/macos-arm64/VLC.dmg";
+                    "https://github.com/MinecraftMediaLibrary/VLC-Release-Mirror/raw/master/macos-arm64/VLC.dmg";
           }
           this.ffmpegDownloadLink =
-              "https://github.com/a-schild/jave2/raw/master/jave-nativebin-osx64/src/main/resources/ws/schild/jave/nativebin/ffmpeg-x86_64-osx";
-          break;
+                  "https://github.com/a-schild/jave2/raw/master/jave-nativebin-osx64/src/main/resources/ws/schild/jave/nativebin/ffmpeg-x86_64-osx";
+        }
       }
     } else {
       switch (this.system.getOSType()) {
-        case WINDOWS:
+        case WINDOWS -> {
           Logger.info("Detected Windows 32-bit Operating System");
           this.vlcDownloadLink =
               "https://github.com/MinecraftMediaLibrary/VLC-Release-Mirror/raw/master/win32/VLC.zip";
           this.ffmpegDownloadLink =
               "https://github.com/a-schild/jave2/raw/master/jave-nativebin-win32/src/main/resources/ws/schild/jave/nativebin/ffmpeg-x86.exe";
-          break;
-        case UNIX:
+          }
+        case UNIX -> {
           if (this.cpu.getArchitecture().contains("arm")) {
             Logger.info("Detected Linux ARM 32-bit Operating System");
             this.vlcDownloadLink = "N/A";
             this.ffmpegDownloadLink =
                 "https://github.com/a-schild/jave2/raw/master/jave-nativebin-arm32/src/main/resources/ws/schild/jave/nativebin/ffmpeg-arm";
-          }
+          }}
       }
     }
   }
@@ -129,21 +129,21 @@ public final class SystemDiagnostics implements Diagnostic {
     Logger.info("===========================================");
     Logger.info("             PLUGIN INFORMATION            ");
     Logger.info("===========================================");
-    Logger.info(String.format("Plugin Name: %s", plugin.getName()));
-    Logger.info(String.format("Plugin Description: %s", plugin.getDescription()));
-    Logger.info(String.format("Library Disabled? %s", this.core.isDisabled()));
-    Logger.info(String.format("Library Path: %s", this.core.getLibraryPath()));
-    Logger.info(String.format("VLC Path: %s", this.core.getVlcPath()));
-    Logger.info(String.format("Image Path: %s", this.core.getImagePath()));
-    Logger.info(String.format("Audio Path: %s", this.core.getAudioPath()));
+    Logger.info("Plugin Name: %s".formatted(plugin.getName()));
+    Logger.info("Plugin Description: %s".formatted(plugin.getDescription()));
+    Logger.info("Library Disabled? %s".formatted(this.core.isDisabled()));
+    Logger.info("Library Path: %s".formatted(this.core.getLibraryPath()));
+    Logger.info("VLC Path: %s".formatted(this.core.getVlcPath()));
+    Logger.info("Image Path: %s".formatted(this.core.getImagePath()));
+    Logger.info("Audio Path: %s".formatted(this.core.getAudioPath()));
     Logger.info("===========================================");
     Logger.info("             SERVER INFORMATION            ");
     Logger.info("===========================================");
-    Logger.info(String.format("Server Name: %s", server.getName()));
-    Logger.info(String.format("Version: %s", server.getVersion()));
-    Logger.info(String.format("Idle Timeout: %d", server.getIdleTimeout()));
-    Logger.info(String.format("Online Mode?: %s", server.getOnlineMode()));
-    Logger.info(String.format("Player Count: %s", server.getOnlinePlayers()));
+    Logger.info("Server Name: %s".formatted(server.getName()));
+    Logger.info("Version: %s".formatted(server.getVersion()));
+    Logger.info("Idle Timeout: %d".formatted(server.getIdleTimeout()));
+    Logger.info("Online Mode?: %s".formatted(server.getOnlineMode()));
+    Logger.info("Player Count: %s".formatted(server.getOnlinePlayers()));
     Logger.info(
         "Plugins: "
             + Arrays.stream(server.getPluginManager().getPlugins())
@@ -152,15 +152,15 @@ public final class SystemDiagnostics implements Diagnostic {
     Logger.info("===========================================");
     Logger.info("             SYSTEM INFORMATION            ");
     Logger.info("===========================================");
-    Logger.info(String.format("Operating System: %s", this.system.getOSName()));
-    Logger.info(String.format("Version: %s", this.system.getVersion()));
-    Logger.info(String.format("Linux Distribution: %s", this.system.getLinuxDistribution()));
-    Logger.info(String.format("CPU Architecture: %s", this.cpu.getArchitecture()));
+    Logger.info("Operating System: %s".formatted(this.system.getOSName()));
+    Logger.info("Version: %s".formatted(this.system.getVersion()));
+    Logger.info("Linux Distribution: %s".formatted(this.system.getLinuxDistribution()));
+    Logger.info("CPU Architecture: %s".formatted(this.cpu.getArchitecture()));
     Logger.info("===========================================");
     Logger.info("             INSTALLATION LINKS            ");
     Logger.info("===========================================");
-    Logger.info(String.format("VLC Installation URL: %s", this.vlcDownloadLink));
-    Logger.info(String.format("FFmpeg Installation URL: %s", this.ffmpegDownloadLink));
+    Logger.info("VLC Installation URL: %s".formatted(this.vlcDownloadLink));
+    Logger.info("FFmpeg Installation URL: %s".formatted(this.ffmpegDownloadLink));
     Logger.info("===========================================");
   }
 
