@@ -61,7 +61,6 @@ import org.bukkit.scheduler.BukkitRunnable;
  *
  * @author Kristian
  */
-@SuppressWarnings("deprecation")
 public abstract class TinyProtocol {
   private static final AtomicInteger ID = new AtomicInteger(0);
 
@@ -139,14 +138,14 @@ public abstract class TinyProtocol {
     this.plugin = plugin;
 
     // Compute handler name
-    handlerName = getHandlerName();
+    this.handlerName = this.getHandlerName();
 
     // Prepare existing players
-    registerBukkitEvents();
+    this.registerBukkitEvents();
 
     try {
-      registerChannelHandler();
-      registerPlayers(plugin);
+      this.registerChannelHandler();
+      this.registerPlayers(plugin);
     } catch (final IllegalArgumentException ex) {
       // Damn you, late bind
       plugin.getLogger().info("[TinyProtocol] Delaying server channel injection due to late bind.");
@@ -154,8 +153,8 @@ public abstract class TinyProtocol {
       new BukkitRunnable() {
         @Override
         public void run() {
-          registerChannelHandler();
-          registerPlayers(plugin);
+          TinyProtocol.this.registerChannelHandler();
+          TinyProtocol.this.registerPlayers(plugin);
           plugin.getLogger().info("[TinyProtocol] Late bind injection successful.");
         }
       }.runTask(plugin);
@@ -164,39 +163,41 @@ public abstract class TinyProtocol {
 
   private void createServerChannelHandler() {
     // Handle connected channels
-    endInitProtocol =
-        new ChannelInitializer<Channel>() {
+    this.endInitProtocol =
+        new ChannelInitializer<>() {
 
           @Override
           protected void initChannel(final Channel channel) {
             try {
               // This can take a while, so we need to stop the main thread from interfering
-              synchronized (networkManagers) {
+              synchronized (TinyProtocol.this.networkManagers) {
                 // Stop injecting channels
-                if (!closed) {
-                  channel.eventLoop().submit(() -> injectChannelInternal(channel));
+                if (!TinyProtocol.this.closed) {
+                  channel
+                      .eventLoop()
+                      .submit(() -> TinyProtocol.this.injectChannelInternal(channel));
                 }
               }
             } catch (final Exception e) {
-              plugin
+              TinyProtocol.this
+                  .plugin
                   .getLogger()
-                  .log(
-                      Level.SEVERE, String.format("Cannot inject incoming channel %s", channel), e);
+                  .log(Level.SEVERE, "Cannot inject incoming channel %s".formatted(channel), e);
             }
           }
         };
 
     // This is executed before Minecraft's channel handler
-    beginInitProtocol =
-        new ChannelInitializer<Channel>() {
+    this.beginInitProtocol =
+        new ChannelInitializer<>() {
 
           @Override
           protected void initChannel(final Channel channel) {
-            channel.pipeline().addLast(endInitProtocol);
+            channel.pipeline().addLast(TinyProtocol.this.endInitProtocol);
           }
         };
 
-    serverChannelHandler =
+    this.serverChannelHandler =
         new ChannelInboundHandlerAdapter() {
 
           @Override
@@ -204,7 +205,7 @@ public abstract class TinyProtocol {
             final Channel channel = (Channel) msg;
 
             // Prepare to initialize ths channel
-            channel.pipeline().addFirst(beginInitProtocol);
+            channel.pipeline().addFirst(TinyProtocol.this.beginInitProtocol);
             ctx.fireChannelRead(msg);
           }
         };
@@ -212,35 +213,34 @@ public abstract class TinyProtocol {
 
   /** Register bukkit events. */
   private void registerBukkitEvents() {
-    listener =
+    this.listener =
         new Listener() {
 
           @EventHandler(priority = EventPriority.LOWEST)
-          public final void onPlayerLogin(final PlayerLoginEvent e) {
-            if (closed) {
+          public void onPlayerLogin(final PlayerLoginEvent e) {
+            if (TinyProtocol.this.closed) {
               return;
             }
 
-            final Channel channel = getChannel(e.getPlayer());
+            final Channel channel = TinyProtocol.this.getChannel(e.getPlayer());
 
             // Don't inject players that have been explicitly uninjected
-            if (!uninjectedChannels.contains(channel)) {
-              injectPlayer(e.getPlayer());
+            if (!TinyProtocol.this.uninjectedChannels.contains(channel)) {
+              TinyProtocol.this.injectPlayer(e.getPlayer());
             }
           }
 
           @EventHandler
-          public final void onPluginDisable(final PluginDisableEvent e) {
-            if (e.getPlugin().equals(plugin)) {
-              close();
+          public void onPluginDisable(final PluginDisableEvent e) {
+            if (e.getPlugin().equals(TinyProtocol.this.plugin)) {
+              TinyProtocol.this.close();
             }
           }
         };
 
-    plugin.getServer().getPluginManager().registerEvents(listener, plugin);
+    this.plugin.getServer().getPluginManager().registerEvents(this.listener, this.plugin);
   }
 
-  @SuppressWarnings("unchecked")
   private void registerChannelHandler() {
     final Object mcServer = getMinecraftServer.get(Bukkit.getServer());
     final Object serverConnection = getServerConnection.get(mcServer);
@@ -248,11 +248,11 @@ public abstract class TinyProtocol {
 
     // We need to synchronize against this list
     if (getNetworkMarkers == null) {
-      networkManagers = (List<Object>) networkMarkersB.get(serverConnection);
+      this.networkManagers = (List<Object>) networkMarkersB.get(serverConnection);
     } else {
-      networkManagers = (List<Object>) getNetworkMarkers.invoke(null, serverConnection);
+      this.networkManagers = (List<Object>) getNetworkMarkers.invoke(null, serverConnection);
     }
-    createServerChannelHandler();
+    this.createServerChannelHandler();
 
     // Find the correct list, or implicitly throw an exception
     for (int i = 0; looking; i++) {
@@ -267,19 +267,19 @@ public abstract class TinyProtocol {
         // Channel future that contains the server connection
         final Channel serverChannel = ((ChannelFuture) item).channel();
 
-        serverChannels.add(serverChannel);
-        serverChannel.pipeline().addFirst(serverChannelHandler);
+        this.serverChannels.add(serverChannel);
+        serverChannel.pipeline().addFirst(this.serverChannelHandler);
         looking = false;
       }
     }
   }
 
   private void unregisterChannelHandler() {
-    if (serverChannelHandler == null) {
+    if (this.serverChannelHandler == null) {
       return;
     }
 
-    for (final Channel serverChannel : serverChannels) {
+    for (final Channel serverChannel : this.serverChannels) {
       final ChannelPipeline pipeline = serverChannel.pipeline();
 
       // Remove channel handler
@@ -288,7 +288,7 @@ public abstract class TinyProtocol {
           .execute(
               () -> {
                 try {
-                  pipeline.remove(serverChannelHandler);
+                  pipeline.remove(this.serverChannelHandler);
                 } catch (final NoSuchElementException e) {
                   // That's fine
                 }
@@ -298,7 +298,7 @@ public abstract class TinyProtocol {
 
   private void registerPlayers(final Plugin plugin) {
     for (final Player player : plugin.getServer().getOnlinePlayers()) {
-      injectPlayer(player);
+      this.injectPlayer(player);
     }
   }
 
@@ -341,7 +341,7 @@ public abstract class TinyProtocol {
    * @param packet - the packet to send.
    */
   public void sendPacket(final Player player, final Object packet) {
-    sendPacket(getChannel(player), packet);
+    this.sendPacket(this.getChannel(player), packet);
   }
 
   /**
@@ -367,7 +367,7 @@ public abstract class TinyProtocol {
    * @param packet - the packet that will be received by the server.
    */
   public void receivePacket(final Player player, final Object packet) {
-    receivePacket(getChannel(player), packet);
+    this.receivePacket(this.getChannel(player), packet);
   }
 
   /**
@@ -393,7 +393,7 @@ public abstract class TinyProtocol {
    * @return A unique channel handler name.
    */
   protected String getHandlerName() {
-    return String.format("tiny-%s-%d", plugin.getName(), ID.incrementAndGet());
+    return "tiny-%s-%d".formatted(this.plugin.getName(), ID.incrementAndGet());
   }
 
   /**
@@ -405,7 +405,7 @@ public abstract class TinyProtocol {
    * @param player - the player to inject.
    */
   public void injectPlayer(final Player player) {
-    injectChannelInternal(getChannel(player)).player = player;
+    this.injectChannelInternal(this.getChannel(player)).player = player;
   }
 
   /**
@@ -414,7 +414,7 @@ public abstract class TinyProtocol {
    * @param channel - the channel to inject.
    */
   public void injectChannel(final Channel channel) {
-    injectChannelInternal(channel);
+    this.injectChannelInternal(channel);
   }
 
   /**
@@ -425,19 +425,19 @@ public abstract class TinyProtocol {
    */
   private PacketInterceptor injectChannelInternal(final Channel channel) {
     try {
-      PacketInterceptor interceptor = (PacketInterceptor) channel.pipeline().get(handlerName);
+      PacketInterceptor interceptor = (PacketInterceptor) channel.pipeline().get(this.handlerName);
 
       // Inject our packet interceptor
       if (interceptor == null) {
         interceptor = new PacketInterceptor();
-        channel.pipeline().addBefore("packet_handler", handlerName, interceptor);
-        uninjectedChannels.remove(channel);
+        channel.pipeline().addBefore("packet_handler", this.handlerName, interceptor);
+        this.uninjectedChannels.remove(channel);
       }
 
       return interceptor;
     } catch (final IllegalArgumentException e) {
       // Try again
-      return (PacketInterceptor) channel.pipeline().get(handlerName);
+      return (PacketInterceptor) channel.pipeline().get(this.handlerName);
     }
   }
 
@@ -448,17 +448,17 @@ public abstract class TinyProtocol {
    * @return The Netty channel.
    */
   public Channel getChannel(final Player player) {
-    Channel channel = channelLookup.get(player.getName());
+    Channel channel = this.channelLookup.get(player.getName());
 
     // Lookup channel again
     if (channel == null) {
       final Object connection = getConnection.get(getPlayerHandle.invoke(player));
       final Object manager = getManager.get(connection);
 
-      channelLookup.put(player.getName(), channel = getChannel.get(manager));
+      this.channelLookup.put(player.getName(), channel = getChannel.get(manager));
     }
-    if (!uuidChannelLookup.containsKey(player.getUniqueId())) {
-      uuidChannelLookup.put(player.getUniqueId(), channel);
+    if (!this.uuidChannelLookup.containsKey(player.getUniqueId())) {
+      this.uuidChannelLookup.put(player.getUniqueId(), channel);
     }
 
     return channel;
@@ -472,17 +472,17 @@ public abstract class TinyProtocol {
    * @return The Netty channel
    */
   public Channel getChannel(final UUID uuid, final Object playerConnection) {
-    Channel channel = uuidChannelLookup.get(uuid);
+    Channel channel = this.uuidChannelLookup.get(uuid);
 
     if (channel == null && playerConnection != null) {
-      uuidChannelLookup.put(uuid, channel = getChannel.get(getManager.get(playerConnection)));
+      this.uuidChannelLookup.put(uuid, channel = getChannel.get(getManager.get(playerConnection)));
     }
 
     return channel;
   }
 
   public void removeChannel(final Player player) {
-    uuidChannelLookup.remove(player.getUniqueId());
+    this.uuidChannelLookup.remove(player.getUniqueId());
   }
 
   /**
@@ -491,7 +491,7 @@ public abstract class TinyProtocol {
    * @param player - the injected player.
    */
   public void uninjectPlayer(final Player player) {
-    uninjectChannel(getChannel(player));
+    this.uninjectChannel(this.getChannel(player));
   }
 
   /**
@@ -504,12 +504,12 @@ public abstract class TinyProtocol {
    */
   public void uninjectChannel(final Channel channel) {
     // No need to guard against this if we're closing
-    if (!closed) {
-      uninjectedChannels.add(channel);
+    if (!this.closed) {
+      this.uninjectedChannels.add(channel);
     }
 
     // See ChannelInjector in ProtocolLib, line 590
-    channel.eventLoop().execute(() -> channel.pipeline().remove(handlerName));
+    channel.eventLoop().execute(() -> channel.pipeline().remove(this.handlerName));
   }
 
   /**
@@ -519,7 +519,7 @@ public abstract class TinyProtocol {
    * @return TRUE if it is, FALSE otherwise.
    */
   public boolean hasInjected(final Player player) {
-    return hasInjected(getChannel(player));
+    return this.hasInjected(this.getChannel(player));
   }
 
   /**
@@ -529,22 +529,22 @@ public abstract class TinyProtocol {
    * @return TRUE if it is, FALSE otherwise.
    */
   public boolean hasInjected(final Channel channel) {
-    return channel.pipeline().get(handlerName) != null;
+    return channel.pipeline().get(this.handlerName) != null;
   }
 
   /** Cease listening for packets. This is called automatically when your plugin is disabled. */
   public final void close() {
-    if (!closed) {
-      closed = true;
+    if (!this.closed) {
+      this.closed = true;
 
       // Remove our handlers
-      for (final Player player : plugin.getServer().getOnlinePlayers()) {
-        uninjectPlayer(player);
+      for (final Player player : this.plugin.getServer().getOnlinePlayers()) {
+        this.uninjectPlayer(player);
       }
 
       // Clean up Bukkit
-      HandlerList.unregisterAll(listener);
-      unregisterChannelHandler();
+      HandlerList.unregisterAll(this.listener);
+      this.unregisterChannelHandler();
     }
   }
 
@@ -562,12 +562,12 @@ public abstract class TinyProtocol {
     public void channelRead(final ChannelHandlerContext ctx, Object msg) throws Exception {
       // Intercept channel
       final Channel channel = ctx.channel();
-      handleLoginStart(channel, msg);
+      this.handleLoginStart(channel, msg);
 
       try {
-        msg = onPacketInAsync(player, channel, msg);
+        msg = TinyProtocol.this.onPacketInAsync(this.player, channel, msg);
       } catch (final Exception e) {
-        plugin.getLogger().log(Level.SEVERE, "Error in onPacketInAsync().", e);
+        TinyProtocol.this.plugin.getLogger().log(Level.SEVERE, "Error in onPacketInAsync().", e);
       }
 
       if (msg != null) {
@@ -579,9 +579,9 @@ public abstract class TinyProtocol {
     public void write(final ChannelHandlerContext ctx, Object msg, final ChannelPromise promise)
         throws Exception {
       try {
-        msg = onPacketOutAsync(player, ctx.channel(), msg);
+        msg = TinyProtocol.this.onPacketOutAsync(this.player, ctx.channel(), msg);
       } catch (final Exception e) {
-        plugin.getLogger().log(Level.SEVERE, "Error in onPacketOutAsync().", e);
+        TinyProtocol.this.plugin.getLogger().log(Level.SEVERE, "Error in onPacketOutAsync().", e);
       }
 
       if (msg != null) {
@@ -592,7 +592,7 @@ public abstract class TinyProtocol {
     private void handleLoginStart(final Channel channel, final Object packet) {
       if (PACKET_LOGIN_IN_START.isInstance(packet)) {
         final GameProfile profile = getGameProfile.get(packet);
-        channelLookup.put(profile.getName(), channel);
+        TinyProtocol.this.channelLookup.put(profile.getName(), channel);
       }
     }
   }
